@@ -8,6 +8,9 @@ CHANGELOG for Fall of Eden
 Version 0.4i
 ------------
 * Fixed a bunch of bugs and typos.
+* Added new effects to a bunch of TF items. Among other things:
+ - Adjusting femininity
+ - Adjusting muscle tone (not widely used atm)
 
 --------------------------------------------
              PREVIOUS VERSIONS
